--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -246,7 +246,7 @@
                     </li>
                   `
                 }
-                var dt = new Date(data[i].date).addHours(-9).addMonths(1);
+                var date = new Date(data[i].date).addHours(-9).addMonths(1);
                 var tr = `
                   <tr>
                     <td>${data[i].mname}</td>
