add uname in result

--- a/production/index.html
+++ b/production/index.html
@@ -399,7 +399,7 @@
         for(var i=0;i<sum.length;i++) {
           var text="";
           for(var j=0;j<sum[i].length;j++) {
-            text += sum[i][j]+" ";
+            text += sum[i][j][1]+"("+meeting.member[sum[i][j][0]].uname+")"+"<br/>";
           }
           var li = `
           <li>
