--- a/production/tables.html
+++ b/production/tables.html
@@ -354,9 +354,9 @@
 
       });
 
-      $('a[data-toggle="tab"]').on( 'shown.bs.tab', function (e) { //탭이 보여지고 난 후
-            $.fn.dataTable.tables( {visible: true, api: true} ).columns.adjust();
-        } );
+      // $('a[data-toggle="tab"]').on( 'shown.bs.tab', function (e) { //탭이 보여지고 난 후
+      //       $.fn.dataTable.tables( {visible: true, api: true} ).columns.adjust();
+      //   } );
 
       // 즐겨찾는 계정 전체 검색
       function printFavorite(){
