나도 이제 내가 뭘 커밋하는지 모르겠음

--- a/production/chat.html
+++ b/production/chat.html
@@ -219,7 +219,7 @@
       var mid = "";
       $(document).ready(function(){
         mid = parent.document.URL.substring(parent.document.URL.indexOf('=')+1, parent.document.URL.length);
-        printMyInfo();
+        printMyInfo(unum);
         printTalk();
       });
       function printTalk() {
