--- a/production/form.html
+++ b/production/form.html
@@ -303,7 +303,7 @@
     var unum = getCookie('unum')? getCookie('unum'): 1;
 
     $(document).ready(function(){
-      printMyInfo();
+      printMyInfo(unum);
     });
 
 
