--- a/production/project_detail.html
+++ b/production/project_detail.html
@@ -265,7 +265,7 @@
 
       $(document).ready(function(){
         mid = parent.document.URL.substring(parent.document.URL.indexOf('=')+1, parent.document.URL.length);
-        printMyInfo();
+        printMyInfo(unum);
         printMeetingInfo();
       });
 
