--- a/production/projects.html
+++ b/production/projects.html
@@ -204,7 +204,7 @@
       var unum = getCookie('unum')? getCookie('unum'): 1;
 
       $(document).ready(function(){
-        printMyInfo();
+        printMyInfo(unum);
         printBookedMeetingList();
       });
 
