--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -214,7 +214,7 @@
       var unum = getCookie('unum')? getCookie('unum'): 1;
 
       $(document).ready(function(){
-        printMyInfo();
+        printMyInfo(unum);
         printBookedMeetingList();
       });
 
