--- a/production/echarts.html
+++ b/production/echarts.html
@@ -421,7 +421,7 @@
     var mid=''
     $(document).ready(function(){
       mid = parent.document.URL.substring(parent.document.URL.indexOf('=')+1, parent.document.URL.length);
-      printMyInfo();
+      printMyInfo(unum);
       printMeetingResult();
     });
     function printMeetingResult() {
