--- a/production/login.html
+++ b/production/login.html
@@ -125,13 +125,13 @@
                 <!-- <form data-parsley-validate> -->
                   <h4>Create Account</h4>
                   <div>
-                    <input type="text" class="form-control" placeholder="ID" required="required" id="id" />
+                    <input type="text" class="form-control" placeholder="ID" required="required" id="reg_id" />
                   </div>
                   <div>
                     <input type="password" class="form-control" placeholder="Password" required="required" />
                   </div>
                   <div>
-                    <input type="password" class="form-control" placeholder="Retype password" required="required" id="pw" />
+                    <input type="password" class="form-control" placeholder="Retype password" required="required" id="reg_pw" />
                   </div>
                 <!-- </form> -->
               <!-- </section> -->
@@ -155,7 +155,7 @@
                     <input type="text" class="form-control" placeholder="직책" required="required" id="position" />
                   </div>
                   <div>
-                    <button type="submit" class="btn btn-default submit" >회원가입</button>
+                    <button type="button" class="btn btn-default submit" onclick="register()">회원가입</button>
                   </div>
 
                   <div class="clearfix"></div>
@@ -241,45 +241,79 @@
         }
       }
 
-      // function register(){
-      //   try {
-      //
-      //     var id = $("#id").val();
-      //     var pw = $("#pw").val();
-      //     var name = $("#name").val();
-      //     var company = $("#company").val();
-      //     var department = $("#department").val();
-      //     var position = $("#position").val();
-      //
-      //     var settings = {
-      //       crossDomain: true,
-      //       url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/register",
-      //       type: "POST",
-      //       contentType: "application/json",
-      //       data: `{
-      //         "uid": "${id}",
-      //         "pw": "${pw}",
-      //         "uname": "${name}",
-      //         "company": "${company}",
-      //         "department": "${department}",
-      //         "position": "${position}"
-      //       }`
-      //     }
-      //
-      //     $.ajax(settings)
-      //       .done(function (response) {
-      //         window.location.replace("");
-      //         // 회원 가입 후 위치
-      //
-      //       })
-      //       .fail(function () {
-      //         alert('fail');
-      //       });
-      //
-      //   } catch(err) {
-      //     alert(err);
-      //   }
-      // }
+      async function register(){
+
+        var sdata = await uploadImage();
+        var jdata = JSON.parse(sdata);
+        var path = jdata.data[0];
+        console.log("register", path);
+
+        try {
+          var id = $("#reg_id").val();
+          var pw = $("#reg_pw").val();
+          var name = $("#name").val();
+          var company = $("#company").val();
+          var department = $("#department").val();
+          var position = $("#position").val();
+
+          var settings = {
+            crossDomain: true,
+            url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/register",
+            type: "POST",
+            contentType: "application/json",
+            data: `{
+              "uid": "${id}",
+              "pw": "${pw}",
+              "uname": "${name}",
+              "company": "${company}",
+              "department": "${department}",
+              "position": "${position}",
+              "uimage": "${path}"
+            }`
+          }
+
+          $.ajax(settings)
+            .done(function (response) {
+              alert('success');
+              // 회원 가입 후 위치
+              // window.location.replace("");
+
+            })
+            .fail(function () {
+              alert('fail');
+            });
+
+        } catch(err) {
+          alert(err);
+        }
+      }
+
+      async function uploadImage(){
+        var form = new FormData();
+        form.append("file", document.getElementById("mypicture").files[0]);
+
+        var settings = {
+          "async": true,
+          "crossDomain": true,
+          "url": "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/upload2",
+          "method": "POST",
+          "processData": false,
+          "contentType": false,
+          "mimeType": "multipart/form-data",
+          "data": form
+        }
+
+        var path;
+        await $.ajax(settings)
+          .done(function (response) {
+            var result = JSON.parse(response);
+            return result;
+          })
+          .then(function (data) {
+            path = data;
+          });
+        return path;
+      }
     </script>
   </body>
 </html>
