아주 조금 수정 주소를

--- a/production/login.html
+++ b/production/login.html
@@ -281,7 +281,7 @@
             .done(function (response) {
               alert('success');
               // 회원 가입 후 위치
-              window.location.replace("/login.html");
+              window.location.replace("https://purlwon.github.io/Meetkey/production/login.html#signin");
 
             })
             .fail(function () {
