--- a/production/form.html
+++ b/production/form.html
@@ -17,8 +17,6 @@
     <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
     <link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
-    <!-- bootstrap-wysiwyg -->
-    <link href="../vendors/google-code-prettify/bin/prettify.min.css" rel="stylesheet">
     <!-- Select2 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <!-- Switchery -->
@@ -27,6 +25,8 @@
     <link href="../vendors/starrr/dist/starrr.css" rel="stylesheet">
     <!-- bootstrap-daterangepicker -->
     <link href="../vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <!-- bootstrap-datetimepicker -->
+    <link href="../vendors/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.css" rel="stylesheet">
@@ -143,17 +143,6 @@
               <div class="title_left">
                 <h3>회의 만들기</h3>
               </div>
-
-              <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
-                </div>
-              </div>
             </div>
             <div class="clearfix"></div>
             <div class="row">
@@ -161,41 +150,45 @@
                 <div class="x_panel">
                   <div class="x_content">
                     <br />
-                    <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
+                    <form data-parsley class="form-horizontal form-label-left">
 
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">회의 이름 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="mname">회의 이름 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
+                          <!-- mname input -->
                           <input type="text" id="mname" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">회의 날짜 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="date">회의 날짜 <span class="required">*</span>
                         </label>
-                        <div class="col-md-6 col-sm-6 col-xs-12  date" >
-                          <input type="text" id="date" name required="required" class="form-control col-md-7 col-xs-12">
-
+                        <div class="col-md-6 col-sm-6 col-xs-12 date" >
+                          <!-- date input -->
+                          <input type="text" id="date" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">회의 시간 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="time">회의 시간 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12 date">
-                          <input id="time" required="required" class="form-control col-md-7 col-xs-12" type="text" name>
+                          <!-- time input -->
+                          <input type="text" id="time" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">회의 장소 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="where">회의 장소 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="where" class="form-control col-md-7 col-xs-12" required="required" type="text">
+                          <!-- where input -->
+                          <input type="text" id="where" class="form-control col-md-7 col-xs-12" required="required">
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="members" class="control-label col-md-3 col-sm-3 col-xs-12">회의 참여자 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
+                          <!-- sel_mem select -->
                           <select id="sel_mem" class="select2 form-control col-md-7 col-xs-12" required="required" multiple="multiple">
                             <optgroup label="즐겨찾기" id="sel_fav">
                               <option>라</option>
@@ -262,18 +255,15 @@
     <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
     <!-- bootstrap-datetimepicker -->
     <script src="../vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    <!-- bootstrap-wysiwyg -->
-    <script src="../vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script>
     <script src="../vendors/jquery.hotkeys/jquery.hotkeys.js"></script>
-    <script src="../vendors/google-code-prettify/src/prettify.js"></script>
-    <!-- jQuery Tags Input -->
-    <script src="../vendors/jquery.tagsinput/src/jquery.tagsinput.js"></script>
     <!-- Switchery -->
     <script src="../vendors/switchery/dist/switchery.min.js"></script>
     <!-- Select2 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     <!-- Parsley -->
     <script src="../vendors/parsleyjs/dist/parsley.min.js"></script>
+    <!-- Parsley ko -->
+    <script src="../vendors/parsleyjs/dist/i18n/ko.js"></script>
     <!-- Autosize -->
     <script src="../vendors/autosize/dist/autosize.min.js"></script>
     <!-- jQuery autocomplete -->
@@ -285,16 +275,16 @@
     <script src="./js/cookie.js"></script>
 
     <script>
-      $('#myDatepicker2').datetimepicker({
+      $('#date').datetimepicker({
         format: 'MM/DD/YYYY'
       });
 
-      $('#myDatepicker3').datetimepicker({
-        format: 'hh:mm A'
+      $('#time').datetimepicker({
+        format: 'hh:mm'
       });
 
       $(document).ready(function() {
-          $('.select2').select2();
+          $('#sel_mem').select2();
       });
     </script>
 
