--- a/production/echarts.html
+++ b/production/echarts.html
@@ -373,7 +373,7 @@
                       <div class="col-md-9 col-sm-9 col-xs-12">
                         <!-- tensor -->
                         <p>tensor board</p>
-                        <iframe id="tensor" src="http://desktop-bpei9jt:6006/#projector&run=." width="900" height="650"></iframe>
+                        <iframe id="tensor" src="" width="900" height="650"></iframe>
                       </div>
                       <div class="col-md-3 col-sm-3 col-xs-12">
                         <table class="table">
