--- a/production/tables.html
+++ b/production/tables.html
@@ -20,7 +20,7 @@
     <!-- Select2 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <!-- Custom Theme Style -->
-    <link href="../build/css/custom.min.css" rel="stylesheet">
+    <link href="../build/css/custom.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -69,7 +69,6 @@
                   </li>
                   <li><a><i class="fa fa-bar-chart-o"></i> 회의 분석 <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="echarts.html">지난 회의 결과</a></li>
                       <li><a href="projects.html">회의록 리스트</a></li>
                     </ul>
                   </li>
@@ -77,14 +76,11 @@
                     <ul class="nav child_menu">
                       <li><a href="form.html">회의 만들기</a></li>
                       <li><a href="tables_dynamic.html">회의 예약리스트</a></li>
-                      <li><a href="project_detail.html">회의 중(임시)</a></li>
                     </ul>
                   </li>
                   <li><a href="tables.html"><i class="fa fa-group"></i> 친구 관리 </a>
                   </li>
                   <li><a href="calendar.html"><i class="fa fa-calendar"></i> 일정 관리 </a>
-                  </li>
-                  <li><a href="profile.html"><i class="fa fa-cog"></i> 개인 설정 </a>
                   </li>
                 </ul>
               </div>
@@ -133,17 +129,6 @@
             <div class="page-title">
               <div class="title_left">
                 <h3>친구 관리 </h3>
-              </div>
-
-              <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
-                </div>
               </div>
             </div>
 
